@@ -4,6 +4,7 @@
 	- Added secondary ordering on title on releases listing on VN page
 	- Added i+/c+ ID recognition to VN search
 	- Bugfix: Properly make i+ IDs linkable in bb2html()
+	- Bugfix: Make sure the user dropdown boxes work on /v+/chars
 
 2.20 - 2011-05-01
 	- Added support for sponsored links on VN pages
